fix white space and footer links

--- a/app/assets/stylesheets/splash.scss
+++ b/app/assets/stylesheets/splash.scss
@@ -98,7 +98,6 @@ $font: Circular, -apple-system, BlinkMacSystemFont, Roboto, "Helvetica Neue", sa
     gap: 25px;
     margin-left: 80px;
     margin-top: 20px;
-    margin-bottom: 200px;
 }
 
 .inspo-city {
